# feedburst

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  appveyor.yml  example.feeds  run-feedburst.bat
src/: config.rs  error.rs  feed.rs  main.rs  parse_util.rs  parser.rs
src/platform/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
