[package]
name = "feedburst"
version = "0.4.1"
authors = ["Caleb Jones <code@calebjones.net>"]
repository = "https://github.com/porglezomp/feedburst"
license = "GPL-3.0+"
readme = "README.md"
keywords = ["comic", "rss", "atom", "syndication"]
categories = ["command-line-utilities"]
edition = "2018"
publish = true
description = """
A tool to consume comic RSS feeds and present them to you in bunches, on a schedule of your choosing.
"""

[badges]
travis-ci = { repository = "porglezomp/feedburst", branch = "develop" }
appveyor = { repository = "porglezomp/feedburst", branch = "develop" }
coveralls = { repository = "porglezomp/feedburst", branch = "develop" }

[dependencies]
syndication = "0.4"
reqwest = "0.9"
xdg = "^2.1"
chrono = "0.4"
clap = "2.32"
log = "0.4.5"
pretty_env_logger = "0.2.4"
app_dirs = "1.2.1"
regex = "1.0"

[[bin]]
name = "feedburst"
